@@ -1,17 +1,15 @@
+*.bak
+*.tar.gz
+*~
+.releaserc
+blib/
+cover_db
 Makefile
 Makefile.old
-*.tar.gz
-*.bak
-pm_to_blib
-blib/
-WWW-Kickstarter-*
-WWW-Kickstarter-*/
-.releaserc
-cover_db
-MYMETA.*
 META.*
-Build
-Build.bat
-_build/
+MYMETA.*
+pm_to_blib
 pod2htmd.tmp
 pod2htmi.tmp
+WWW-Kickstarter-*
+WWW-Kickstarter-*/
