@@ -1,9 +1,15 @@
-^MYMETA\.
-^Build$
-^Build.bat$
-^_build
-^blib
-^WWW-Kickstarter-.*
-~$
 ^.git/
-.*.bak$
+^.gitignore$
+.bak$
+.tar.gz$
+~$
+.releaserc
+^blib/
+cover_db
+^Makefile$
+^Makefile.old$
+MYMETA.*
+^pm_to_blib$
+pod2htmd.tmp
+pod2htmi.tmp
+^WWW-Kickstarter-
