@@ -26,7 +26,7 @@ diag( "Testing WWW::Kickstarter $WWW::Kickstarter::VERSION" );
 diag( "Using Perl $]" );
 
 for (sort grep /\.pm\z/, keys %INC) {
-   s/\.pm\z//;
-   s!/!::!g;
+   s{\.pm\z}{};
+   s{/}{::}g;
    eval { diag(join(' ', $_, $_->VERSION || '<unknown>')) };
 }
