@@ -1,7 +1,9 @@
+#!perl
+
+# Expected to be run from ../ (make test) or ../blib/ (make disttest)
+
 use strict;
 use warnings;
-
-use FindBin qw( $RealBin );
 
 use Test::More;
 
@@ -36,7 +38,4 @@ BEGIN {
    *Test::Pod::Coverage::all_modules = $new_all_modules;
 }
 
-chdir($RealBin) or die $!;
 all_pod_coverage_ok();
-
-1;
